# critirs

./: Cargo.toml  LICENSE  README.md  Safety.md  build.rs
src/: common.rs  crit.rs  crit_static.rs  lib.rs  wrapper.c  wrapper.cpp  wrapper.rs
