[package]
name = "critirs"
version = "0.1.0"
authors = ["Tyler Ruckinger"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
winapi = { version = "0.3", features = ["synchapi"] }
static_assertions = "1.1"

[features]
default = ["all"]
all = ["CriticalSection", "CriticalStatic"]
no_alloc = ["CriticalStatic"]

CriticalSection = []
CriticalStatic = []